syntax = "proto3";

package proto;

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string refreshToken = 1;
    string tokenType = 2;
    string accessToken = 3;
    int32 expiresIn = 4;
    string cookie = 5;
}

message AuthResult {
    string id = 1;
    bool success = 2;
    string message = 3;
    AuthResponse result = 4;
}

message GetUserStoresRequest {
    string grantedStores = 1;
    string username = 2;
}

message GetUserStoresResult {
    string id = 1;
    bool success = 2;
    string message = 3;
    repeated StoresResponse result = 4;
}
message StoresResponse {
    string id = 1;
    string name = 2;
}

message GetTokenWithoutCredentialsRequest {
    string old_token = 1;
    string cookie = 2;
}

message GetUserInfoRequest {
    string username = 1;
    string id = 2;
}

message GetUserInfoResult {
    string id = 1;
    bool success = 2;
    string message = 3;
    GetUserInfoResponse result = 4;
}

message GetUserInfoResponse {
    string id = 1;
    string created_at = 2;
    string updated_at = 3;
    string username = 4;
    string email = 5;
    string organization_id = 6;
    string application_id = 7;
    repeated string roles = 8;
    string language = 9;
    string status = 10;
}